[tool.poetry]
name = "learn-langchain"
version = "0.1.0"
description = ""
authors = ["Milutin Studen <studen.m98@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.13"
openai = "^1.14.2"
jupyter = "^1.0.0"
langchain-openai = "^0.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
